--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==1.9
+Django==1.9.4
 Pillow==3.1.1
 argparse==1.4.0
+django-admin-bootstrapped==2.5.7
+django-bootstrap3==7.0.1
 virtualenv==13.0.3
 wsgiref==0.1.2
