--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 Django==1.9.4
 Pillow==3.1.1
 argparse==1.4.0
-django-admin-bootstrapped==2.5.7
-django-bootstrap3==7.0.1
+django-allauth==0.25.2
+django-ckeditor==5.0.3
+oauthlib==1.0.3
+python-openid==2.2.5
+requests==2.9.1
+requests-oauthlib==0.6.1
 virtualenv==13.0.3
 wsgiref==0.1.2
